<resources>
    <string name="app_name">NBA App</string>

    <string name="explore">Explore</string>
    <string name="favourites">Favourites</string>
    <string name="seasons">Seasons</string>
    <string name="season">Season</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="regular_season">Regular Season</string>
    <string name="playoffs">Playoffs</string>
    <string name="metric_label">Metric (cm, kg)</string>
    <string name="imperial_label">Imperial (ft, lb)</string>
    <string name="unit_type">Unit type</string>
    <string name="date_format">Date format</string>
    <string name="match_display">Match Display</string>
    <string name="home_vs_visitor">Home vs Visitor</string>
    <string name="visitor_vs_home">Visitor vs Home</string>
    <string name="about">About</string>
    <string name="about_text_short">NBA application built at Sofa Score Academy, designed by the Sofa Score designers team.</string>
    <string name="more_info">More info</string>
    <string name="clear_my_favourites_list">Clear my favourites list</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="clear_favourites_list_question">Clear favourites list?</string>
    <string name="clear_favourites_body">If you clear your favourites, your favourites screen will be empty.</string>
    <string name="sofa_score_academy">Sofa Score Academy</string>
    <string name="class_2022">Class 2022</string>
    <string name="app_name_label">App name</string>
    <string name="api_credit_label">Api credit</string>
    <string name="nba_app">NBA App</string>
    <string name="balldontlie">balldontlie</string>
    <string name="developer">Developer</string>
    <string name="nino_kovacic">Nino Kovačić</string>
    <string name="other_teams_label">Other teams in the division</string>
    <string name="home_arena_label">Home Arena</string>
    <string name="details">Details</string>
    <string name="matches">Matches</string>
    <string name="statistics">Statistics</string>
    <string name="top_players">Top Players</string>
    <string name="team">Team</string>
    <string name="youtube_highlights">Youtube Highlights</string>
    <string name="player_stats">Player Stats</string>
    <string name="match_info">Match info</string>
    <string name="stadium">Stadium</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="n_a">N/A</string>
    <string name="all_players">All players</string>
    <string name="all_teams">All teams</string>
    <string name="conference">Conference</string>
    <string name="division">Division</string>
    <string name="western">Western</string>
    <string name="eastern">Eastern</string>
    <string name="atlantic">Atlantic</string>
    <string name="central">Central</string>
    <string name="northwest">Northwest</string>
    <string name="pacific">Pacific</string>
    <string name="southeast">Southeast</string>
    <string name="southwest">Southwest</string>
    <string name="removed_from_favourites">Removed %1$s from Favourites</string>
    <string name="favourites_list_is_clear">Favourites list is clear</string>
    <string name="stats_per_game">Stats (per game)</string>
    <string name="add_player_photo">Add player photo</string>
    <string name="url">URL</string>
    <string name="photo_title">Photo Title</string>
    <string name="add">Add</string>
    <string name="caption_cannot_be_blank">Caption cannot be blank</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="filter_matches">Filter Matches</string>
    <string name="apply">Apply</string>
    <string name="fg_pct">FG%</string>
    <string name="fg3_pct">FG3%</string>
    <string name="reb">REB</string>
    <string name="ast">AST</string>
    <string name="tov">TOV</string>
    <string name="oreb">OREB</string>
    <string name="points">Points</string>
    <string name="field_goals_made">Field Goals Made</string>
    <string name="field_goal_3_pts_made">Field Goal 3-pointers Made</string>
    <string name="offensive_rebounds">Offensive Rebounds</string>
    <string name="rebounds">Rebounds</string>
    <string name="assists">Assists</string>
    <string name="turnovers">Turnovers</string>
    <string name="vs">vs</string>
    <string name="opponent">Opponent</string>
    <string name="add_a_youtube_url">Add a YouTube URL to see videos for this team</string>
    <string name="add_url">Add url</string>
    <string name="add_youtube_video">Add Youtube Video</string>
    <string name="paste_image_url">Paste image url</string>
    <string name="paste_video_url">Paste video URL</string>
    <string name="video_title">Video title</string>
    <string name="video_helper_text">Type a video title, ie. "Lakers vs. Nets Half time"</string>
    <string name="manage_photos">Manage photos</string>
    <string name="delete_all_photos">Delete all photos</string>
    <string name="delete_all_player_photos">Delete all player photos</string>
    <string name="delete_player_photos_alert_text">If you clear all player photos, you won\'t be able to recover them</string>
    <string name="deleted_all_player_photos">Deleted all player photos</string>
    <string name="no_results_found">No results found</string>
    <string name="try_adjusting_filter">Try adjusting your search or filter to find what you are looking for.</string>
    <string name="no_favourite_teams">No favourite teams</string>
    <string name="no_favourite_players">No favourite players</string>
    <string name="add_favourite_teams_in_explore">Go ahead and add your favourite teams in the explore page</string>
    <string name="add_favourite_players_in_explore">Go ahead and add your favourite players in the explore page</string>
    <string name="west">West</string>
    <string name="east">East</string>
</resources>