<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grey_card_background">

    <TextView
        android:id="@+id/choose_unit_title"
        style="@style/AssistiveNLv2Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_type"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_unit_title">

        <RadioButton
            android:id="@+id/radio_button_metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/color_primary"
            android:checked="true"
            android:paddingStart="16dp"
            android:text="@string/metric_label"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/radio_button_imperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/color_primary"
            android:paddingStart="16dp"
            android:text="@string/imperial_label"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>