<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/header"
        android:layout_width="48dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/header_cell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/HeadlineMediumNLv1Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_player_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/url"
        android:textColorHint="@color/color_primary"
        app:boxBackgroundColor="@color/surface_surface_2"
        app:boxStrokeColor="@color/color_primary"
        app:endIconTint="@color/black"
        app:helperText="@string/paste_image_url"
        app:helperTextTextAppearance="@style/AssistiveNLv2Left"
        app:helperTextTextColor="@color/neutrals_n_lv_2"
        app:hintTextColor="@color/color_primary"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/url_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textAppearance="@style/BodyLargeNLv1Left"
            tools:text="https://cdn.nba.com/headshots/n…" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/caption_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/photo_title"
        android:textColorHint="@color/color_primary"
        app:boxBackgroundColor="@color/surface_surface_2"
        app:boxStrokeColor="@color/color_primary"
        app:endIconTint="@color/black"
        app:helperText="Type a photo title, ie. “LeBron Headshot”"
        app:helperTextTextAppearance="@style/AssistiveNLv2Left"
        app:helperTextTextColor="@color/neutrals_n_lv_2"
        app:hintTextColor="@color/color_primary"
        app:layout_constraintTop_toBottomOf="@id/url_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/caption_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textAppearance="@style/BodyLargeNLv1Left"
            tools:text="https://cdn.nba.com/headshots/n…" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:paddingVertical="14dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textAppearance="@style/ButtonLabelPrimaryCenter"
        android:textColor="@color/color_primary"
        app:layout_constraintEnd_toStartOf="@id/button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caption_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/color_primary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="14dp"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/caption_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>