<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_surface_0"
    tools:context=".fragments.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/nba_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:src="@drawable/ic_nba_logo" />

        <TextView
            style="@style/HeadlineMediumOnColorLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:text="@string/settings" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_format_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/date_format"
        android:textColorHint="@color/color_primary"
        app:boxBackgroundColor="@color/surface_surface_2"
        app:boxStrokeColor="@color/color_primary"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/color_primary"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/date_format_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            tools:text="31/12/2022" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/choose_units_card"
        layout="@layout/choose_units_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/date_format_input_layout" />

    <include
        android:id="@+id/match_display_card"
        layout="@layout/match_display_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/choose_units_card" />

    <include
        android:id="@+id/about_card"
        layout="@layout/about_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/match_display_card" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_my_cities_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/clear_button_background"
        android:text="@string/clear_my_favourites_list"
        android:textColor="@color/status_error"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/about_card" />

</androidx.constraintlayout.widget.ConstraintLayout>